--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,244 +13,254 @@
       margin: 0;
       padding: 0;
       color: #fff;
-      background: #000;
+      background-color: #000; /* Set the background to black */
       overflow-x: hidden;
       position: relative;
     }
+Copy.bg-wrapper {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  z-index: -1;
+}
 
-    .bg-wrapper {
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      overflow: hidden;
-      z-index: -1;
-    }
+.gradient-bg {
+  position: absolute;
+  top: -50%;
+  left: -50%;
+  width: 200%;
+  height: 200%;
+  background: radial-gradient(ellipse at center, 
+    rgba(78,0,126,0.7) 0%, 
+    rgba(110,87,255,0.6) 20%, 
+    rgba(139,0,232,0.5) 40%, 
+    rgba(179,66,255,0.4) 60%, 
+    rgba(221,110,255,0.3) 80%, 
+    transparent 100%
+  );
+  animation: 
+    gradientRotate 20s linear infinite,
+    gradientPulse 10s ease-in-out infinite alternate;
+  transform-origin: center;
+}
 
-    .gradient-bg {
-      position: absolute;
-      top: -50%;
-      left: -50%;
-      width: 200%;
-      height: 200%;
-      background: radial-gradient(ellipse at center, 
-        rgba(78,0,126,0.7) 0%, 
-        rgba(110,87,255,0.6) 20%, 
-        rgba(139,0,232,0.5) 40%, 
-        rgba(179,66,255,0.4) 60%, 
-        rgba(221,110,255,0.3) 80%, 
-        transparent 100%
-      );
-      animation: 
-        gradientRotate 20s linear infinite,
-        gradientPulse 10s ease-in-out infinite alternate;
-      transform-origin: center;
-    }
+.particle-overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  pointer-events: none;
+  opacity: 0.7;
+}
 
-    .particle-overlay {
-      position: absolute;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      pointer-events: none;
-      opacity: 0.7;
-    }
+.particle {
+  position: absolute;
+  background: radial-gradient(circle, 
+    rgba(255,255,255,0.8) 0%, 
+    rgba(255,255,255,0) 70%
+  );
+  border-radius: 50%;
+  animation: particleMove 15s linear infinite;
+}
 
-    .particle {
-      position: absolute;
-      background: radial-gradient(circle, 
-        rgba(255,255,255,0.8) 0%, 
-        rgba(255,255,255,0) 70%
-      );
-      border-radius: 50%;
-      animation: particleMove 15s linear infinite;
-    }
+@keyframes gradientRotate {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
 
-    @keyframes gradientRotate {
-      0% { transform: rotate(0deg); }
-      100% { transform: rotate(360deg); }
-    }
+@keyframes gradientPulse {
+  0% {
+    transform: scale(0.9);
+    opacity: 0.7;
+  }
+  100% {
+    transform: scale(1.1);
+    opacity: 0.9;
+  }
+}
 
-    @keyframes gradientPulse {
-      0% {
-        transform: scale(0.9);
-        opacity: 0.7;
-      }
-      100% {
-        transform: scale(1.1);
-        opacity: 0.9;
-      }
-    }
+@keyframes particleMove {
+  0% {
+    transform: 
+      translateX(0) 
+      translateY(0) 
+      scale(0.5) 
+      rotate(0deg);
+    opacity: 0.8;
+  }
+  50% {
+    transform: 
+      translateX(var(--move-x)) 
+      translateY(var(--move-y)) 
+      scale(1) 
+      rotate(180deg);
+    opacity: 0.5;
+  }
+  100% {
+    transform: 
+      translateX(0) 
+      translateY(0) 
+      scale(0.5) 
+      rotate(360deg);
+    opacity: 0.2;
+  }
+}
 
-    @keyframes particleMove {
-      0% {
-        transform: 
-          translateX(0) 
-          translateY(0) 
-          scale(0.5) 
-          rotate(0deg);
-        opacity: 0.8;
-      }
-      50% {
-        transform: 
-          translateX(var(--move-x)) 
-          translateY(var(--move-y)) 
-          scale(1) 
-          rotate(180deg);
-        opacity: 0.5;
-      }
-      100% {
-        transform: 
-          translateX(0) 
-          translateY(0) 
-          scale(0.5) 
-          rotate(360deg);
-        opacity: 0.2;
-      }
-    }
+/* Original CSS from the previous design */
+nav {
+  background-color: #000;
+  color: #fff;
+  padding: 10px 0;
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+}
 
-    /* Original CSS from the previous design */
-    nav {
-      background-color: #000;
-      color: #fff;
-      padding: 10px 0;
-      position: fixed;
-      top: 0;
-      left: 0;
-      right: 0;
-      z-index: 1000;
-    }
+nav ul {
+  list-style: none;
+  text-align: center;
+  margin: 0;
+  padding: 0;
+}
 
-    nav ul {
-      list-style: none;
-      text-align: center;
-      margin: 0;
-      padding: 0;
-    }
+nav ul li {
+  display: inline;
+  margin: 0 15px;
+}
 
-    nav ul li {
-      display: inline;
-      margin: 0 15px;
-    }
+nav ul li a {
+  color: #fff;
+  text-decoration: none;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
 
-    nav ul li a {
-      color: #fff;
-      text-decoration: none;
-      font-size: 1.2rem;
-      font-weight: 500;
-    }
+nav ul li a:hover {
+  color: #b342ff;
+}
 
-    nav ul li a:hover {
-      color: #b342ff;
-    }
+header {
+  text-align: center;
+  padding: 150px 20px 100px;
+}
 
-    header {
-      text-align: center;
-      padding: 150px 20px 100px;
-    }
+header h1 {
+  font-size: 5rem;
+  font-family: 'Orbitron', sans-serif;
+  font-weight: bold;
+  background: linear-gradient(90deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #9400d3);
+  background-size: 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: brightRainbow-animation 4s linear infinite;
+}
 
-    header h1 {
-      font-size: 5rem;
-      font-family: 'Orbitron', sans-serif;
-      font-weight: bold;
-      background: linear-gradient(90deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #9400d3);
-      background-size: 400%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: brightRainbow-animation 4s linear infinite;
-    }
+@keyframes brightRainbow-animation {
+  0% { background-position: 0% 50%; }
+  50% { background-position: 100% 50%; }
+  100% { background-position: 0% 50%; }
+}
 
-    @keyframes brightRainbow-animation {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
+section#animated-rings {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 400px;
+  overflow: hidden;
+}
 
-    header p {
-      font-size: 1.5rem;
-      margin: 20px 0;
-    }
+#animated-rings img {
+  max-width: 100%;
+  height: auto;
+}
 
-    section {
-      padding: 80px 20px;
-      text-align: center;
-    }
+header p {
+  font-size: 1.5rem;
+  margin: 20px 0;
+}
 
-    section h2 {
-      font-size: 4rem;
-      font-family: 'Orbitron', sans-serif;
-      background: linear-gradient(90deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #9400d3);
-      background-size: 400%;
-      -webkit-background-clip: text;
-      -webkit-text-fill-color: transparent;
-      animation: rainbowGlow 6s ease-in-out infinite alternate;
-      text-shadow: 0 0 15px rgba(221, 110, 255, 0.6);
-    }
+section {
+  padding: 80px 20px;
+  text-align: center;
+}
 
-    @keyframes rainbowGlow {
-      0% { text-shadow: 0 0 10px rgba(221, 110, 255, 0.4); }
-      100% { text-shadow: 0 0 25px rgba(221, 110, 255, 0.8); }
-    }
+section h2 {
+  font-size: 4rem;
+  font-family: 'Orbitron', sans-serif;
+  background: linear-gradient(90deg, #ff0000, #ff7f00, #ffff00, #00ff00, #0000ff, #4b0082, #9400d3);
+  background-size: 400%;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  animation: rainbowGlow 6s ease-in-out infinite alternate;
+  text-shadow: 0 0 15px rgba(221, 110, 255, 0.6);
+}
 
-    .content-box {
-      max-width: 1100px;
-      margin: 40px auto;
-      padding: 40px;
-      background: rgba(255, 255, 255, 0.1);
-      border: 1px solid rgba(255, 255, 255, 0.2);
-      border-radius: 15px;
-      box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
-      animation: fadeIn 2s ease;
-    }
+@keyframes rainbowGlow {
+  0% { text-shadow: 0 0 10px rgba(221, 110, 255, 0.4); }
+  100% { text-shadow: 0 0 25px rgba(221, 110, 255, 0.8); }
+}
 
-    @keyframes fadeIn {
-      from {
-        opacity: 0;
-        transform: scale(0.9);
-      }
-      to {
-        opacity: 1;
-        transform: scale(1);
-      }
-    }
+.content-box {
+  max-width: 1100px;
+  margin: 40px auto;
+  padding: 40px;
+  background: rgba(255, 255, 255, 0.1);
+  border: 1px solid rgba(255, 255, 255, 0.2);
+  border-radius: 15px;
+  box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5);
+  animation: fadeIn 2s ease;
+}
 
-    .content-box p {
-      font-size: 1.3rem;
-      line-height: 1.8;
-    }
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: scale(0.9);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
+  }
+}
 
-    .content-box strong {
-      color: #ffbaff;
-      font-weight: bold;
-    }
+.content-box p {
+  font-size: 1.3rem;
+  line-height: 1.8;
+}
 
-    footer {
-      background: rgba(0, 0, 0, 0.8);
-      padding: 40px 0;
-      text-align: center;
-      color: #fff;
-    }
+.content-box strong {
+  color: #ffbaff;
+  font-weight: bold;
+}
 
-    footer a {
-      color: #b342ff;
-      text-decoration: none;
-    }
+footer {
+  background: rgba(0, 0, 0, 0.8);
+  padding: 40px 0;
+  text-align: center;
+  color: #fff;
+}
 
-    footer a:hover {
-      text-decoration: underline;
-    }
+footer a {
+  color: #b342ff;
+  text-decoration: none;
+}
+
+footer a:hover {
+  text-decoration: underline;
+}
   </style>
 </head>
-
 <body>
   <!-- Advanced Background Layers -->
   <div class="bg-wrapper">
     <div class="gradient-bg"></div>
     <div class="particle-overlay" id="particleOverlay"></div>
   </div>
-
   <!-- Menu Bar -->
   <nav>
     <ul>
@@ -261,12 +270,13 @@
       <li><a href="#coming-soon">Coming Soon</a></li>
     </ul>
   </nav>
-
   <header>
-    <h1>StreamChain.online</h1>
-    <p>The Future of Streaming, Powered by Blockchain</p>
+    <section id="animated-rings">
+      <img src="https://cdn.prod.website-files.com/674a7c6d7a7dcf5421f21c1f/674b914686960a3fa61a203d_blackpulse3.gif" alt="Animated Rings">
+    </section>
+Copy<h1>StreamChain.online</h1>
+<p>The Future of Streaming, Powered by Blockchain</p>
   </header>
-
   <section id="about">
     <h2>About <span>StreamChain</span></h2>
     <div class="content-box">
@@ -275,7 +285,6 @@
       </p>
     </div>
   </section>
-
   <section id="features">
     <h2>Why <span>StreamChain.online?</span></h2>
     <div class="content-box">
@@ -290,7 +299,6 @@
       </p>
     </div>
   </section>
-
   <section id="team">
     <h2>Our <span>Team</span></h2>
     <div class="content-box">
@@ -305,12 +313,11 @@
       </p>
     </div>
   </section>
-
   <section id="coming-soon">
     <h2>Coming <span>Soon</span></h2>
     <div class="content-box">
       <p>
-        We are beyond excited to announce that <strong>StreamChain.online</strong> will officially launch on <strong>December 1st</strong>—and we're ready to transform the way you experience streaming. After months of tireless development, we've built a platform that's not just about watching content—it's about owning it, rewarding you for your time, and empowering creators to truly benefit from their work.
+        We are beyond excited to announce that <strong>StreamChain.online</strong> will officially launch on <strong>December 2nd</strong>—and we're ready to transform the way you experience streaming. After months of tireless development, we've built a platform that's not just about watching content—it's about owning it, rewarding you for your time, and empowering creators to truly benefit from their work.
       </p>
       <p>
         With <strong>Solana</strong>, <strong>Polygon</strong>, and the upcoming <strong>Avalanche Network</strong> integrations, our platform is designed for lightning-fast, secure transactions that ensure seamless streaming with no borders or restrictions.
@@ -320,11 +327,9 @@
       </p>
     </div>
   </section>
-
   <footer>
     <p>StreamChain &copy; 2024 | <a href="#">Privacy Policy</a> | <a href="#">Terms of Service</a></p>
   </footer>
-
   <script>
     function createParticles() {
       const overlay = document.getElementById('particleOverlay');
